# medium-classifier

./: .pre-commit-config.yaml  Makefile  dvc-commands.md  evaluate.dvc  filter_by_topic.dvc  pyproject.toml  split_data.dvc  train.dvc  vectorise_text.dvc
.dvc/: config
data/: .gitignore  articles_mails.csv.dvc
data/features/: .gitignore
hooks/: post-checkout  pre-push
metrics/: accuracy.txt
models/: .gitignore
notebooks/: feature_exploration.py  featurisation.py  training.py
src/: evaluate.py  filter_by_topic.py  split_data.py  tokenisation.py  train.py  vectorise_text.py
