[tool.poetry]
name = "medium-classifier"
version = "0.0.0"
description = "A quick and raw multiclass classification pipeline made with DVC"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
jupytext = "^1.4"
pre-commit = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
