[tool.poetry]
name = "medium-classifier"
version = "0.0.0"
description = "A quick and raw multiclass classification pipeline made with DVC"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-decouple = "^3.3"
numpy = "^1.18"
pandas = "^1.0"
scikit-learn = "^0.22.2"
nltk = "^3.4"
Unidecode = "^1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
jupytext = "^1.4"
pre-commit = "^2.2"
isort = "^4.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
dvc = {version = "^0.88.0", extras = ["s3"]}
click = "^7.1"
matplotlib = "^3.2"
seaborn = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
